--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>GAMESKART</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.home.chunk.css">
-    <link rel="stylesheet" href="./css/main.carousel.chunk.css">
+    <link rel="stylesheet" href="./pcgames/css/main.home.chunk.css">
+    <link rel="stylesheet" href="./pcgames/css/main.carousel.chunk.css">
 </head>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -21,7 +21,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-<script src="./js/main.carousel.chunk.js"></script>
+<script src="./pcgames/js/main.carousel.chunk.js"></script>
 
 <body onload="dropMenuFuncRemove1(),dropMenuFuncRemove2(),dropMenuFuncRemove3(),stopMainMenu()"
     onmouseleave="dropMenuFuncRemove1(),dropMenuFuncRemove2(),dropMenuFuncRemove3(),stopMainMenu()">
@@ -131,10 +131,10 @@
             </div>
         </div>
     </div>
-    <script src="./js/main.home.chunk.js"></script>
+    <script src="./pcgames/js/main.home.chunk.js"></script>
     <script>!function (e) { function t(t) { for (var n, l, p = t[0], a = t[1], f = t[2], c = 0, s = []; c < p.length; c++)l = p[c], Object.prototype.hasOwnProperty.call(o, l) && o[l] && s.push(o[l][0]), o[l] = 0; for (n in a) Object.prototype.hasOwnProperty.call(a, n) && (e[n] = a[n]); for (i && i(t); s.length;)s.shift()(); return u.push.apply(u, f || []), r() } function r() { for (var e, t = 0; t < u.length; t++) { for (var r = u[t], n = !0, p = 1; p < r.length; p++) { var a = r[p]; 0 !== o[a] && (n = !1) } n && (u.splice(t--, 1), e = l(l.s = r[0])) } return e } var n = {}, o = { 1: 0 }, u = []; function l(t) { if (n[t]) return n[t].exports; var r = n[t] = { i: t, l: !1, exports: {} }; return e[t].call(r.exports, r, r.exports, l), r.l = !0, r.exports } l.m = e, l.c = n, l.d = function (e, t, r) { l.o(e, t) || Object.defineProperty(e, t, { enumerable: !0, get: r }) }, l.r = function (e) { "undefined" != typeof Symbol && Symbol.toStringTag && Object.defineProperty(e, Symbol.toStringTag, { value: "Module" }), Object.defineProperty(e, "__esModule", { value: !0 }) }, l.t = function (e, t) { if (1 & t && (e = l(e)), 8 & t) return e; if (4 & t && "object" == typeof e && e && e.__esModule) return e; var r = Object.create(null); if (l.r(r), Object.defineProperty(r, "default", { enumerable: !0, value: e }), 2 & t && "string" != typeof e) for (var n in e) l.d(r, n, function (t) { return e[t] }.bind(null, n)); return r }, l.n = function (e) { var t = e && e.__esModule ? function () { return e.default } : function () { return e }; return l.d(t, "a", t), t }, l.o = function (e, t) { return Object.prototype.hasOwnProperty.call(e, t) }, l.p = "/pcgames/"; var p = this.webpackJsonpwebdevelopment_bootstrap = this.webpackJsonpwebdevelopment_bootstrap || [], a = p.push.bind(p); p.push = t, p = p.slice(); for (var f = 0; f < p.length; f++)t(p[f]); var i = a; r() }([])</script>
     <script src="./static/js/2.1b9a871c.chunk.js"></script>
-    <script src="./static/js/main.36bd07df.chunk.js"></script>
+    <script src="./static/pcgames/js/main.36bd07df.chunk.js"></script>
 </body>
 
 </html>
